Language level avaluation analysis

--- a/src/analysis/evaluation/language_level_evaluation.ipynb
+++ b/src/analysis/evaluation/language_level_evaluation.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from notebook_init import notebook_init, notebook_imports\n",
     "\n",
@@ -19,13 +28,16 @@
     "notebook_imports()\n",
     "\n",
     "from src.bots.evaluation_bot import LanguageLevelEvaluationBot\n",
+    " \n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "from sklearn.metrics import accuracy_score"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc:  0.2777777777777778\n",
-      "Num diff > 1:  2\n",
-      "[2, 2, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3]\n",
+      "Acc:  0.5\n",
+      "Num diff > 1:  0\n",
+      "[1, 1, 2, 1, 2, 3, 1, 1, 3, 2, 3, 3, 2, 3, 3, 2, 3, 3]\n",
       "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
      ]
     }
@@ -102,18 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average acc:  0.3666666666666667\n",
-      "Average percentage diff > 1:  0.1388888888888889\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sum_acc = 0\n",
     "sum_num_diff = 0\n",
@@ -142,20 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acc:  0.2222222222222222\n",
-      "Num diff > 1:  4\n",
-      "[2, 2, 2, 2, 2, 1, 3, 3, 2, 2, 2, 2, 3, 3, 3, 3, 3, 2]\n",
-      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = LanguageLevelEvaluationBot(1)\n",
     "\n",
@@ -173,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average acc:  0.4\n",
-      "Average percentage diff > 1:  0.14999999999999997\n"
+      "Average acc:  0.5555555555555555\n",
+      "Average percentage diff > 1:  0.05\n"
      ]
     }
    ],
@@ -213,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc:  0.2222222222222222\n",
-      "Num diff > 1:  1\n",
-      "[1, 2, 2, 2, 3, 2, 3, 3, 2, 2, 1, 2, 2, 3, 3, 2, 3, 3]\n",
+      "Acc:  0.4444444444444444\n",
+      "Num diff > 1:  0\n",
+      "[1, 1, 3, 1, 2, 2, 2, 1, 3, 2, 3, 3, 2, 3, 3, 2, 3, 3]\n",
       "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
      ]
     }
@@ -230,7 +222,7 @@
    "source": [
     "bot = LanguageLevelEvaluationBot(2)\n",
     "\n",
-    "ratings = [ bot.evaluate('English', m[1], m[0]) for m in examples]\n",
+    "ratings = [ bot.evaluate('English', m[1], m[0], print_prompt=True) for m in examples]\n",
     "\n",
     "acc =  accuracy_score(ratings, correct_ratings)   \n",
     "diff_g_e = count_diff(ratings, correct_ratings)\n",
@@ -244,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average acc:  0.3388888888888889\n",
-      "Average percentage diff > 1:  0.2\n"
+      "Average acc:  0.5222222222222223\n",
+      "Average percentage diff > 1:  0.09444444444444447\n"
      ]
     }
    ],
@@ -284,24 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acc:  0.2777777777777778\n",
-      "Num diff > 1:  6\n",
-      "[1, 2, 1, 3, 3, 2, 3, 2, 2, 2, 2, 2, 3, 3, 1, 3, 3, 3]\n",
-      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = LanguageLevelEvaluationBot(3)\n",
     "\n",
-    "ratings = [ bot.evaluate('English', m[1], m[0]) for m in examples]\n",
+    "ratings = [ bot.evaluate('English', m[1], m[0], print_prompt=True) for m in examples]\n",
     "\n",
     "acc =  accuracy_score(ratings, correct_ratings)   \n",
     "diff_g_e = count_diff(ratings, correct_ratings)\n",
@@ -315,15 +296,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average acc:  0.3222222222222222\n",
-      "Average percentage diff > 1:  0.20555555555555555\n"
+      "Average acc:  0.5277777777777779\n",
+      "Average percentage diff > 1:  0.01111111111111111\n"
      ]
     }
    ],
@@ -355,24 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acc:  0.2222222222222222\n",
-      "Num diff > 1:  5\n",
-      "[2, 1, 1, 2, 2, 2, 2, 2, 2, 3, 2, 2, 3, 3, 1, 3, 3, 3]\n",
-      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bot = LanguageLevelEvaluationBot(prompt_alternative=4, level_description_fname='../../templates/language_levels_cefr_extended.json')\n",
     "\n",
-    "ratings = [ bot.evaluate('English', m[1], m[0]) for m in examples]\n",
+    "ratings = [ bot.evaluate('English', m[1], m[0], print_prompt=True) for m in examples]\n",
     "\n",
     "acc =  accuracy_score(ratings, correct_ratings)   \n",
     "diff_g_e = count_diff(ratings, correct_ratings)\n",
@@ -386,15 +356,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average acc:  0.31666666666666665\n",
-      "Average percentage diff > 1:  0.19444444444444448\n"
+      "Average acc:  0.5166666666666667\n",
+      "Average percentage diff > 1:  0.005555555555555555\n"
      ]
     }
    ],
@@ -421,14 +391,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Alternative 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot = LanguageLevelEvaluationBot(prompt_alternative=5)\n",
+    "\n",
+    "ratings = [ bot.evaluate('English', m[1], m[0], print_prompt=True) for m in examples]\n",
+    "\n",
+    "acc =  accuracy_score(ratings, correct_ratings)   \n",
+    "diff_g_e = count_diff(ratings, correct_ratings)\n",
+    "\n",
+    "\n",
+    "print('Acc: ', acc)\n",
+    "print('Num diff > 1: ', diff_g_e )\n",
+    "print(ratings)\n",
+    "print(correct_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average acc:  0.5111111111111111\n",
+      "Average percentage diff > 1:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_acc = 0\n",
+    "sum_num_diff = 0\n",
+    "n_runs = 10\n",
+    "\n",
+    "bot = LanguageLevelEvaluationBot(5)\n",
+    "\n",
+    "for i in range(n_runs):\n",
+    "    \n",
+    "\n",
+    "    ratings = [ bot.evaluate('English', m[1], m[0]) for m in examples]\n",
+    "\n",
+    "    sum_acc +=  accuracy_score(ratings, correct_ratings)   \n",
+    "\n",
+    "    sum_num_diff += count_diff(ratings, correct_ratings)/len(examples)\n",
+    "    \n",
+    "print('Average acc: ', sum_acc/n_runs)\n",
+    "print('Average percentage diff > 1: ', sum_num_diff/n_runs )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot = LanguageLevelEvaluationBot(6, level_description_fname='../../templates/language_levels_cefr.json')\n",
+    "\n",
+    "ratings = [ bot.evaluate('English', m[1], m[0], print_prompt=True) for m in examples]\n",
+    "\n",
+    "acc =  accuracy_score(ratings, correct_ratings)   \n",
+    "diff_g_e = count_diff(ratings, correct_ratings)\n",
+    "\n",
+    "\n",
+    "print('Acc: ', acc)\n",
+    "print('Num diff > 1: ', diff_g_e )\n",
+    "print(ratings)\n",
+    "print(correct_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average acc:  0.5722222222222222\n",
+      "Average percentage diff > 1:  0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_acc = 0\n",
+    "sum_num_diff = 0\n",
+    "n_runs = 10\n",
+    "\n",
+    "bot = LanguageLevelEvaluationBot(6)\n",
+    "\n",
+    "for i in range(n_runs):\n",
+    "    \n",
+    "\n",
+    "    ratings = [ bot.evaluate('English', m[1], m[0]) for m in examples]\n",
+    "\n",
+    "    sum_acc +=  accuracy_score(ratings, correct_ratings)   \n",
+    "\n",
+    "    sum_num_diff += count_diff(ratings, correct_ratings)/len(examples)\n",
+    "    \n",
+    "print('Average acc: ', sum_acc/n_runs)\n",
+    "print('Average percentage diff > 1: ', sum_num_diff/n_runs )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "|Prompt alternative | Average accuracy | Average percentage of difference > 1 |\n",
     "|-------------------|------------------|--------------------------------------|\n",
-    "| 0 | 0.367 | 0.139 |\n",
-    "| 1 | 0.400 | 0.150 |\n",
-    "| 2 | 0.339 | 0.2 |\n",
-    "| 3 | 0.322 |0.201|\n",
-    "| 4 | 0.317 |0.195 |"
+    "| 0 | 0.522 | 0.0 |\n",
+    "| 1 |  0.556 | 0.05 |\n",
+    "| 2 | 0.522| 0.09 |\n",
+    "| 3 | 0.528 |0.011|\n",
+    "| 4 | 0.516 |0.001 |\n",
+    "| 5 | 0.511 | 0.0 |\n",
+    "| 6 | 0.572| 0.05|"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
