--- a/src/analysis/summarization.ipynb
+++ b/src/analysis/summarization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,19 +67,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests trying one of the freshly squeezed juices instead.\n",
-      "CHARS:  169\n",
-      "WORDS:  28\n",
+      "SUMMARY:  The customer orders a cappuccino but is told that the coffee machine is broken. The waiter suggests trying one of their freshly squeezed juices instead.\n",
+      "CHARS:  152\n",
+      "WORDS:  25\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer asks for a cappuccino, but the coffee machine is broken. The waiter recommends trying the apricot juice, and the customer agrees to have it.\n",
-      "CHARS:  153\n",
-      "WORDS:  26\n",
+      "SUMMARY:  The customer decides to try the apricot juice based on the waiter's recommendation.\n",
+      "CHARS:  83\n",
+      "WORDS:  13\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer asks if there are any cakes available and the waiter confirms that they have several different tarts. The customer specifically asks for a blueberry tart and the waiter confirms that they have a freshly baked one. The customer expresses gratitude and thanks the waiter.\n",
-      "CHARS:  282\n",
-      "WORDS:  46\n"
+      "SUMMARY:  The customer asks the waiter if they have any cakes. The waiter says they have several different tarts, including a freshly baked blueberry tart. The customer decides to order the blueberry tart.\n",
+      "CHARS:  195\n",
+      "WORDS:  32\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,19 +126,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer try one of their freshly squeezed juices instead.\n",
-      "CHARS:  186\n",
-      "WORDS:  31\n",
+      "SUMMARY:  The customer wants to order a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer chooses something else from the variety of freshly squeezed juices available.\n",
+      "CHARS:  220\n",
+      "WORDS:  35\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer try one of their freshly squeezed juices instead. The customer agrees and asks for a recommendation. The waiter suggests the apricot juice, and the customer decides to go with that.\n",
-      "CHARS:  318\n",
-      "WORDS:  53\n",
+      "SUMMARY:  The customer wants to order a cappuccino, but is informed by the waiter that the coffee machine is broken. The waiter suggests choosing something else from the variety of freshly squeezed juices available. The customer agrees and asks for a recommendation. The waiter suggests the apricot juice, highlighting its rich flavor. The customer decides to go with the apricot juice.\n",
+      "CHARS:  376\n",
+      "WORDS:  60\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer initially wanted a cappuccino, but the coffee machine was broken. The waiter suggested trying a freshly squeezed juice instead, and the customer agreed. The waiter recommended apricot juice, and the customer decided to go with that. Then, the customer asked if they had any cakes, specifically a blueberry tart. The waiter confirmed that they did have blueberry tarts and the customer ordered one.\n",
-      "CHARS:  410\n",
-      "WORDS:  65\n"
+      "SUMMARY:  The customer initially wanted to order a cappuccino, but was told that the coffee machine was broken. The waiter suggested trying one of the freshly squeezed juices instead. The customer agreed and asked for a recommendation. The waiter suggested the apricot juice, which the customer decided to go with. Later, the customer asked if they had any cakes, specifically a blueberry tart. The waiter confirmed that they did have a freshly baked blueberry tart and the customer ordered it.\n",
+      "CHARS:  484\n",
+      "WORDS:  79\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,19 +185,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer can choose from a variety of freshly squeezed juices instead.\n",
-      "CHARS:  215\n",
-      "WORDS:  38\n",
+      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter offers a variety of freshly squeezed juices instead.\n",
+      "CHARS:  130\n",
+      "WORDS:  21\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer can choose from a variety of freshly squeezed juices instead. The customer decides to try the apricot juice, which the waiter highly recommends.\n",
-      "CHARS:  298\n",
-      "WORDS:  51\n",
+      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter recommends the apricot juice and the customer agrees to try it.\n",
+      "CHARS:  141\n",
+      "WORDS:  24\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the coffee machine is broken. The waiter suggests apricot juice as an alternative. The customer also asks for a blueberry tart, which the waiter confirms they have.\n",
-      "CHARS:  221\n",
-      "WORDS:  39\n"
+      "SUMMARY:  The customer initially wanted a cappuccino, but the coffee machine was broken. The waiter recommended apricot juice and the customer agreed to try it. Later, the customer asked if there were any cakes available. The waiter confirmed that they had several different tarts, including a freshly baked blueberry tart. The customer thanked the waiter and ordered the blueberry tart.\n",
+      "CHARS:  377\n",
+      "WORDS:  59\n"
      ]
     }
    ],
