--- a/src/analysis/evaluation/metrics.ipynb
+++ b/src/analysis/evaluation/metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "identity_pipeline_scores = load_scores('../../plays/evaluation/identity_pipeline_role_fitness.csv')\n",
+    "identity_pipeline_scores = load_scores('../../plays/evaluation/role_fitness/identity.csv')\n",
     "identity_pipeline_scores\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "role_fitness_0_scores = load_scores('../../plays/evaluation/rf_0.csv')\n",
+    "role_fitness_0_scores = load_scores('../../plays/evaluation/role_fitness/rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_0_scores)\n",
     "\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "role_fitness_1_scores = load_scores('../../plays/evaluation/rf_1.csv')\n",
+    "role_fitness_1_scores = load_scores('../../plays/evaluation/role_fitness/rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_1_scores)\n",
     "\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "role_fitness_2_scores = load_scores('../../plays/evaluation/rf_2.csv')\n",
+    "role_fitness_2_scores = load_scores('../../plays/evaluation/role_fitness/rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_2_scores)\n",
     "\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "role_fitness_3_scores = load_scores('../../plays/evaluation/rf_3.csv')\n",
+    "role_fitness_3_scores = load_scores('../../plays/evaluation/role_fitness/rf_3.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_3_scores)\n",
     "\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "ll_rf_0 = load_scores('../../plays/evaluation/ll_rf_0.csv')\n",
+    "ll_rf_0 = load_scores('../../plays/evaluation/role_fitness/ll_rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_0)\n",
     "\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
     }
    ],
    "source": [
-    "ll_rf_1 = load_scores('../../plays/evaluation/ll_rf_1.csv')\n",
+    "ll_rf_1 = load_scores('../../plays/evaluation/role_fitness/ll_rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_1)\n",
     "\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
     }
    ],
    "source": [
-    "ll_rf_2 = load_scores('../../plays/evaluation/ll_rf_2.csv')\n",
+    "ll_rf_2 = load_scores('../../plays/evaluation/role_fitness/ll_rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
     "\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
     }
    ],
    "source": [
-    "identity_pipeline_scores_ll = load_scores('../../plays/evaluation/identity_pipeline_lang_level.csv')\n",
+    "identity_pipeline_scores_ll = load_scores('../../plays/evaluation/language_level/identity.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores_ll)\n",
     "\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "ll_0_scores = load_scores('../../plays/evaluation/language_level_0_evaluation.csv')\n",
+    "ll_0_scores = load_scores('../../plays/evaluation/language_level/ll_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_0_scores)\n",
     "\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
     }
    ],
    "source": [
-    "ll_1_scores = load_scores('../../plays/evaluation/language_level_1_evaluation.csv')\n",
+    "ll_1_scores = load_scores('../../plays/evaluation/language_level/ll_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_1_scores)\n",
     "\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
     }
    ],
    "source": [
-    "ll_2_scores = load_scores('../../plays/evaluation/language_level_2_evaluation.csv')\n",
+    "ll_2_scores = load_scores('../../plays/evaluation/language_level/ll_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_2_scores)\n",
     "\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
     }
    ],
    "source": [
-    "ll_rf_0 = load_scores('../../plays/evaluation/language_level_role_fitness_0_evaluation.csv')\n",
+    "ll_rf_0 = load_scores('../../plays/evaluation/language_level/ll_rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_0)\n",
     "\n",
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
     }
    ],
    "source": [
-    "ll_rf_1 = load_scores('../../plays/evaluation/language_level_role_fitness_1_evaluation.csv')\n",
+    "ll_rf_1 = load_scores('../../plays/evaluation/language_level/ll_rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_1)\n",
     "\n",
@@ -846,71 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average scores per dialogue: \n",
-      "Dialogue  0 :  4.166666666666667\n",
-      "Dialogue  1 :  4.166666666666667\n",
-      "Dialogue  2 :  4.0\n",
-      "Dialogue  3 :  4.0\n",
-      "Dialogue  4 :  4.166666666666667\n",
-      "Dialogue  5 :  3.5\n",
-      "Dialogue  6 :  4.166666666666667\n",
-      "Dialogue  7 :  3.3333333333333335\n",
-      "Dialogue  8 :  4.166666666666667\n",
-      "Dialogue  9 :  4.333333333333333\n",
-      "Dialogue  10 :  4.166666666666667\n",
-      "Dialogue  11 :  4.166666666666667\n",
-      "Dialogue  12 :  3.8333333333333335\n",
-      "Dialogue  13 :  4.333333333333333\n",
-      "Dialogue  14 :  4.0\n",
-      "Dialogue  15 :  4.666666666666667\n",
-      "Dialogue  16 :  4.333333333333333\n",
-      "Dialogue  17 :  3.8333333333333335\n",
-      "\n",
-      "Average score per language level\n",
-      "Level  A1 :  4.111111111111112\n",
-      "Level  A2 :  3.8888888888888893\n",
-      "Level  B1 :  3.8888888888888893\n",
-      "Level  B2 :  4.222222222222222\n",
-      "Level  C1 :  4.055555555555555\n",
-      "Level  C2 :  4.277777777777778\n",
-      "\n",
-      "Total average score:  4.0740740740740735\n"
-     ]
-    }
-   ],
-   "source": [
-    "ll_rf_2 = load_scores('../../plays/evaluation/ll_rf_2.csv')\n",
-    "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
-    "\n",
-    "avg_scores_per_ll = []\n",
-    "for i in range(0, 18, 3):\n",
-    "    avg_scores_per_ll.append(sum(avg_dialogue_scores[i:i+3])/3)\n",
-    "\n",
-    "print('Average scores per dialogue: ')\n",
-    "for i, s in enumerate(avg_dialogue_scores):\n",
-    "    print('Dialogue ', i, ': ', s )\n",
-    "    \n",
-    "print()\n",
-    "print('Average score per language level')\n",
-    "\n",
-    "for s, ll in zip(avg_scores_per_ll, ['A1', 'A2', 'B1', 'B2', 'C1', 'C2']):\n",
-    "    print('Level ', ll, ': ', s )\n",
-    "\n",
-    "print()\n",
-    "print('Total average score: ', total_avg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +886,71 @@
     }
    ],
    "source": [
-    "ll_rf_2 = load_scores('../../plays/evaluation/language_level_role_fitness_2_evaluation.csv')\n",
+    "ll_rf_2 = load_scores('../../plays/evaluation/language_level/ll_rf_2.csv')\n",
+    "\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
+    "\n",
+    "avg_scores_per_ll = []\n",
+    "for i in range(0, 18, 3):\n",
+    "    avg_scores_per_ll.append(sum(avg_dialogue_scores[i:i+3])/3)\n",
+    "\n",
+    "print('Average scores per dialogue: ')\n",
+    "for i, s in enumerate(avg_dialogue_scores):\n",
+    "    print('Dialogue ', i, ': ', s )\n",
+    "    \n",
+    "print()\n",
+    "print('Average score per language level')\n",
+    "\n",
+    "for s, ll in zip(avg_scores_per_ll, ['A1', 'A2', 'B1', 'B2', 'C1', 'C2']):\n",
+    "    print('Level ', ll, ': ', s )\n",
+    "\n",
+    "print()\n",
+    "print('Total average score: ', total_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average scores per dialogue: \n",
+      "Dialogue  0 :  2.5\n",
+      "Dialogue  1 :  2.6666666666666665\n",
+      "Dialogue  2 :  2.8333333333333335\n",
+      "Dialogue  3 :  2.5\n",
+      "Dialogue  4 :  2.5\n",
+      "Dialogue  5 :  3.0\n",
+      "Dialogue  6 :  2.5\n",
+      "Dialogue  7 :  2.5\n",
+      "Dialogue  8 :  3.0\n",
+      "Dialogue  9 :  2.5\n",
+      "Dialogue  10 :  2.6666666666666665\n",
+      "Dialogue  11 :  2.6666666666666665\n",
+      "Dialogue  12 :  2.6666666666666665\n",
+      "Dialogue  13 :  2.6666666666666665\n",
+      "Dialogue  14 :  2.5\n",
+      "Dialogue  15 :  3.0\n",
+      "Dialogue  16 :  2.0\n",
+      "Dialogue  17 :  2.3333333333333335\n",
+      "\n",
+      "Average score per language level\n",
+      "Level  A1 :  2.6666666666666665\n",
+      "Level  A2 :  2.6666666666666665\n",
+      "Level  B1 :  2.6666666666666665\n",
+      "Level  B2 :  2.6111111111111107\n",
+      "Level  C1 :  2.611111111111111\n",
+      "Level  C2 :  2.4444444444444446\n",
+      "\n",
+      "Total average score:  2.611111111111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll_rf_2 = load_scores('../../plays/evaluation/language_level/ll_rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
     "\n",
