Role fitness scores

--- a/src/analysis/evaluation/metrics.ipynb
+++ b/src/analysis/evaluation/metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,17 @@
     "    average_score_per_dialogue = [sum(s)/len(s) for s in scores]\n",
     "    total_average_score = sum(average_score_per_dialogue)/len(average_score_per_dialogue) \n",
     "    return average_score_per_dialogue, total_average_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role_fitness_scores = pd.DataFrame()\n",
+    "\n",
+    "total_scores = pd.DataFrame()"
    ]
   },
   {
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -112,12 +123,15 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "role_fitness_scores['identity'] = avg_dialogue_scores\n",
+    "total_scores['identity'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -158,12 +172,16 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "\n",
+    "role_fitness_scores['rf_0'] = avg_dialogue_scores\n",
+    "total_scores['rf_0'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -204,12 +222,16 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "\n",
+    "role_fitness_scores['rf_1'] = avg_dialogue_scores\n",
+    "total_scores['rf_1'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -250,12 +272,16 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "\n",
+    "role_fitness_scores['rf_2'] = avg_dialogue_scores\n",
+    "total_scores['rf_2'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -296,12 +322,16 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "\n",
+    "role_fitness_scores['rf_3'] = avg_dialogue_scores\n",
+    "total_scores['rf_3'] = [total_avg, ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -347,12 +377,15 @@
     "\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "role_fitness_scores['ll_rf_0'] = avg_dialogue_scores\n",
+    "total_scores['ll_rf_0'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +431,15 @@
     "\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "role_fitness_scores['ll_rf_1'] = avg_dialogue_scores\n",
+    "total_scores['ll_rf_1'] = [total_avg, ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +484,391 @@
     "    print('Dialogue ', i, ': ', s )\n",
     "\n",
     "print()\n",
-    "print('Total average score: ', total_avg)"
+    "print('Total average score: ', total_avg)\n",
+    "\n",
+    "role_fitness_scores['ll_rf_2'] = avg_dialogue_scores\n",
+    "total_scores['ll_rf_2'] = [total_avg, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identity</th>\n",
+       "      <th>rf_0</th>\n",
+       "      <th>rf_1</th>\n",
+       "      <th>rf_2</th>\n",
+       "      <th>rf_3</th>\n",
+       "      <th>ll_rf_0</th>\n",
+       "      <th>ll_rf_1</th>\n",
+       "      <th>ll_rf_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>3.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.833333</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>3.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>3.833333</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.666667</td>\n",
+       "      <td>4.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>4.333333</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.166667</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>3.833333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    identity      rf_0      rf_1      rf_2      rf_3   ll_rf_0   ll_rf_1  \\\n",
+       "0   3.833333  3.166667  4.000000  4.333333  4.500000  3.000000  2.833333   \n",
+       "1   3.666667  3.666667  4.000000  4.000000  4.000000  3.666667  3.500000   \n",
+       "2   4.333333  4.166667  4.000000  3.500000  4.166667  3.500000  3.500000   \n",
+       "3   4.000000  3.333333  3.666667  4.000000  4.166667  4.000000  4.000000   \n",
+       "4   3.833333  4.500000  3.666667  4.000000  3.666667  4.500000  4.333333   \n",
+       "5   4.000000  4.166667  4.333333  4.333333  4.833333  4.000000  4.166667   \n",
+       "6   4.166667  4.000000  4.166667  4.000000  4.166667  4.333333  3.833333   \n",
+       "7   4.000000  4.333333  4.000000  3.166667  4.000000  4.000000  4.166667   \n",
+       "8   4.000000  4.833333  4.000000  3.833333  4.333333  4.000000  3.833333   \n",
+       "9   4.000000  4.500000  3.833333  4.500000  4.000000  4.000000  4.500000   \n",
+       "10  4.000000  4.000000  4.666667  4.166667  4.333333  4.166667  4.166667   \n",
+       "11  4.000000  4.833333  4.333333  4.833333  4.500000  4.166667  4.166667   \n",
+       "12  4.666667  4.166667  4.666667  4.166667  4.666667  4.833333  4.000000   \n",
+       "13  4.166667  5.000000  4.666667  4.500000  3.833333  4.500000  4.666667   \n",
+       "14  4.000000  4.166667  4.000000  4.000000  4.833333  4.000000  4.666667   \n",
+       "15  4.000000  4.333333  4.666667  4.166667  4.833333  4.833333  4.333333   \n",
+       "16  4.166667  4.500000  4.666667  4.666667  4.666667  4.000000  3.666667   \n",
+       "17  3.333333  4.333333  4.833333  4.000000  4.166667  4.000000  4.833333   \n",
+       "\n",
+       "     ll_rf_2  \n",
+       "0   4.166667  \n",
+       "1   4.166667  \n",
+       "2   4.000000  \n",
+       "3   4.000000  \n",
+       "4   4.166667  \n",
+       "5   3.500000  \n",
+       "6   4.166667  \n",
+       "7   3.333333  \n",
+       "8   4.166667  \n",
+       "9   4.333333  \n",
+       "10  4.166667  \n",
+       "11  4.166667  \n",
+       "12  3.833333  \n",
+       "13  4.333333  \n",
+       "14  4.000000  \n",
+       "15  4.666667  \n",
+       "16  4.333333  \n",
+       "17  3.833333  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "role_fitness_scores\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identity</th>\n",
+       "      <th>rf_0</th>\n",
+       "      <th>rf_1</th>\n",
+       "      <th>rf_2</th>\n",
+       "      <th>rf_3</th>\n",
+       "      <th>ll_rf_0</th>\n",
+       "      <th>ll_rf_1</th>\n",
+       "      <th>ll_rf_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.009259</td>\n",
+       "      <td>4.222222</td>\n",
+       "      <td>4.231481</td>\n",
+       "      <td>4.12037</td>\n",
+       "      <td>4.314815</td>\n",
+       "      <td>4.083333</td>\n",
+       "      <td>4.064815</td>\n",
+       "      <td>4.074074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   identity      rf_0      rf_1     rf_2      rf_3   ll_rf_0   ll_rf_1  \\\n",
+       "0  4.009259  4.222222  4.231481  4.12037  4.314815  4.083333  4.064815   \n",
+       "\n",
+       "    ll_rf_2  \n",
+       "0  4.074074  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_scores.to_csv('./role_fitness_total_scores.csv')\n",
+    "role_fitness_scores.to_csv('./role_fitness_scores.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Role fitness analysis\n",
+    "\n",
+    "| Refinement bot | Total average score |\n",
+    "| ----------- | ----------- |\n",
+    "| Identity      |        |\n",
+    "| Paragraph   | Text        |"
    ]
   },
   {
